# sccdec

./: README.md  pyproject.toml
results/: e2e-1shot_0.json  e2e-1shot_1.json  e2e-1shot_2.json  e2e-1shot_3.json  e2e-1shot_4.json  e2e_0.json  e2e_1.json  e2e_2.json  e2e_3.json  e2e_4.json  fae-1shot_0.json  fae-1shot_1.json  fae-1shot_2.json  fae-1shot_3.json  fae-1shot_4.json  fae_0.json  fae_1.json  fae_2.json  fae_3.json  fae_4.json  fae_O0_fix_0.json  fae_O0_fix_1.json  fae_O0_fix_2.json  fae_O0_fix_3.json  fae_O0_fix_4.json  fae_O1_fix_0.json  fae_O1_fix_1.json  fae_O1_fix_2.json  fae_O1_fix_3.json  fae_O1_fix_4.json  fae_O2_fix_0.json  fae_O2_fix_1.json  fae_O2_fix_2.json  fae_O2_fix_3.json  fae_O2_fix_4.json  fae_O3_fix_0.json  fae_O3_fix_1.json  fae_O3_fix_2.json  fae_O3_fix_3.json  fae_O3_fix_4.json  (+60 more)
src/sccdec/: __init__.py  data.py  eval.py
