[project]
name = "sccdec"
version = "0.1.0"
description = "Code For SCCDec"
authors = [
    { name = "Yunlong Feng", email = "ylfeng@ir.hit.edu.cn" }
]
dependencies = [
    "openai>=1.43.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sccdec"]
